# textcat-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
embed/: Cargo.toml
embed/samples/: greek.sample  hindi.sample  japanese.sample  persian.sample  russian.sample  urdu.sample  vietnamese.sample
embed/src/: main.rs  template.rs
samples/: arabic.sample  chinese.sample
src/: category.rs  default.rs  embed.rs  lib.rs  ngram.rs  storage.rs
tests/: samples.json
