[package]
name = "textcat"
version = "0.3.0"
license = "MIT"
description = "Simple library to detect text categories. It can be used to detect the language of a given text"
repository  = "https://github.com/crodas/textcat-rs"
authors = ["Cesar Rodas <cesar@rodasm.com.py>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.0"
unicode-segmentation = "1.7.1"
